# ns-tool-metadata

./: .gitattributes  README.md  main.py  output.csv  pyproject.toml  pyrightconfig.json  test.csv
.claude/: settings.local.json
.zed/: settings.json
kmz_test_files/1_simple/: 20250724-SAABHC0005-m3m-50mAGL.csv  20250724-SAABHC0005-m3m-50mAGL.json  20250724-SAABHC0005-m3m-50mAGL.kmz
kmz_test_files/1_simple/20250724-SAABHC0005-m3m-50mAGL/wpmz/: template.kml  waylines.wpml
kmz_test_files/2_tsto/: 20250723-SAABHC0004-m3m-100mAGL-Ew.json  20250723-SAABHC0004-m3m-100mAGL-Ew.kmz  20250723-SAABHC0004-m3m-100mAGL-NS.json  20250723-SAABHC0004-m3m-100mAGL-NS.kmz  20250723-SAABHC0004-m3m-50mAGL-EW.json  20250723-SAABHC0004-m3m-50mAGL-EW.kmz  20250723-SAABHC0004-m3m-50mAGL-NS.json  20250723-SAABHC0004-m3m-50mAGL-NS.kmz  SANSSTP005.json  SANSSTP005.kmz  TCNSTSE001-50mAGL-TSTT10m.json  TCNSTSE001-50mAGL-TSTT10m.kmz
kmz_test_files/2_tsto/20250723-SAABHC0004-m3m-100mAGL-Ew/wpmz/: template.kml  waylines.wpml
kmz_test_files/3_terrain_follow/: 20240925-NTAFIN0024-30mAGL-RTF.json  20240925-NTAFIN0024-30mAGL-RTF.kmz  20240925-NTAFIN0025-30mAGL-NT.json  20240925-NTAFIN0025-30mAGL-NT.kmz  20240926-NTAFIN0025-100mAGL.json  20240926-NTAFIN0025-100mAGL.kmz  20241029-TCNSTSR001-90mAGL.json
kmz_test_files/4_sensor/: 20240515-TCNSTSE001-P1-80mAGL.json  20240515-TCNSTSE001-P1-80mAGL.kmz  20250722-SAABHC0001-L2.json  20250722-SAABHC0001-L2.kmz  20250724-SAABHC0005-m3m-50mAGL.json
kmz_test_files/5_overlap/: 20240515-TCNSTSE001-50mAGL-s80f90.json  20240515-TCNSTSE001-50mAGL-s80f90.kmz
kmz_test_files/6_sloping/: TCNSTSE0061.json  TCNSTSE0061.kmz  TCNSTSE0062.json  TCNSTSE0062.kmz  TCNSTSE0063.json  TCNSTSE0063.kmz  TCNSTSE0064.json  TCNSTSE0064.kmz
src/dji_metadata_tool/: cli.py  dji_wpml.py
(+33 files in other folders)
