[project]
name = "dji-metadata-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
[project.scripts]
metadata-tool = "dji_metadata_tool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dji_metadata_tool"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
dji_metadata_tool = { path = ".", editable = true }

[tool.pixi.tasks]
run = "metadata-tool"

[tool.pixi.dependencies]
pandas = ">=2.3.3,<3"
pydantic = ">=2.12.5,<3"
pyproj = ">=3.7.2,<4"
shapely = ">=2.1.2,<3"
typer = ">=0.20.0,<0.25"
ruff = ">=0.15.1,<0.16"
ty = ">=0.0.17,<0.0.18"
